--- a/admin/admin.html
+++ b/admin/admin.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin Dashboard - Beauty & Blessed</title>
 
+  <!-- For Chart -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
@@ -1015,7 +1017,7 @@
       <i class="fas fa-bars"></i>
     </button>
     <div class="mobile-logo">
-      <img src="" alt="Store Logo">
+      <img src="bnblogo.jpg" alt="Store Logo">
       <span>Beauty & Blessed</span>
     </div>
   </div>
@@ -1029,7 +1031,7 @@
     <!-- Sidebar -->
     <nav class="col-md-2 d-md-block sidebar" id="sidebar">
       <div class="logo-container">
-        <img src="" alt="Store Logo" class="logo">
+        <img src="bnblogo.jpg" alt="Logo" class="logo">
         <div class="store-name">Beauty & Blessed</div>
       </div>
       <div class="nav flex-column">
@@ -1107,24 +1109,18 @@
         <!-- Graph Section -->
         <div class="col-md-8">
           <div class="chart-container">
-            <div class="chart-header">
-              <h5><i class="fas fa-chart-line"></i> Sales Overview</h5>
-              <div class="btn-group" role="group">
-                <button class="btn btn-outline-secondary btn-sm active">All Time</button>
-                <button class="btn btn-outline-secondary btn-sm">Daily</button>
-                <button class="btn btn-outline-secondary btn-sm">Weekly</button>
-                <button class="btn btn-outline-secondary btn-sm">Monthly</button>
-                <button class="btn btn-outline-secondary btn-sm">Annually</button>
-              </div>
-            </div>
-            <div class="chart-placeholder">
-              <div class="chart-placeholder-content">
-                <i class="fas fa-chart-line fa-3x mb-3" style="color: var(--primary-pink);"></i>
-                <div style="font-size: 1.1rem; margin-bottom: 8px;">Sales Chart Visualization</div>
-                <small class="text-muted">Interactive chart will appear here</small>
-              </div>
+          <div class="chart-header">
+            <h5><i class="fas fa-chart-line"></i> Sales Overview</h5>
+            <div class="btn-group" role="group">
+              <button class="btn btn-outline-secondary btn-sm active">All Time</button>
+              <button class="btn btn-outline-secondary btn-sm">Daily</button>
+              <button class="btn btn-outline-secondary btn-sm">Weekly</button>
+              <button class="btn btn-outline-secondary btn-sm">Monthly</button>
+              <button class="btn btn-outline-secondary btn-sm">Annually</button>
             </div>
           </div>
+          <canvas id="salesChart" style="height: 300px;"></canvas>
+        </div>
         </div>
 
         <!-- Right Panel -->
