Small updates on admin

--- a/admin/qrscanner.html
+++ b/admin/qrscanner.html
@@ -990,7 +990,7 @@
       <i class="fas fa-bars"></i>
     </button>
     <div class="mobile-logo">
-      <img src="" alt="Store Logo">
+      <img src="images/mainlogo.png" alt="Store Logo">
       <span>Beauty & Blessed</span>
     </div>
   </div>
