--- a/admin/customer-managemnet.html
+++ b/admin/customer-managemnet.html
@@ -477,7 +477,7 @@
       <i class="fas fa-bars"></i>
     </button>
     <div class="mobile-logo">
-      <img src="" alt="Store Logo">
+      <img src="images/mainlogo.png" alt="Store Logo">
       <span>Beauty & Blessed</span>
     </div>
   </div>
@@ -491,7 +491,7 @@
     <!-- Sidebar -->
     <nav class="col-md-2 d-md-block sidebar" id="sidebar">
       <div class="logo-container">
-        <img src="" alt="Store Logo" class="logo">
+        <img src="images/mainlogo.png" alt="Store Logo" class="logo">
         <div class="store-name">Beauty & Blessed</div>
       </div>
       <div class="nav flex-column">
