New docker database, log in/sign up functionality, fetch products and add products in admin

--- a/admin/html/recommendation-insights.html
+++ b/admin/html/recommendation-insights.html
@@ -832,31 +832,32 @@
     <!-- Sidebar -->
     <nav class="col-md-2 d-md-block sidebar" id="sidebar">
       <div class="logo-container">
-        <img src="" alt="Store Logo" class="logo">
+        <a href="admin.html">
+          <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
+        </a>
         <div class="store-name">Beauty & Blessed</div>
-      </div>
       <div class="nav flex-column">
-        <a href="#" class="nav-link">
+        <a href="product-management.html" class="nav-link">
           <i class="fa-solid fa-box"></i>
           <span>Product Management</span>
         </a>
-        <a href="#" class="nav-link active">
+        <a href="recommendation-insights.html" class="nav-link active">
           <i class="fa-solid fa-lightbulb"></i>
           <span>Recommendation Insights</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="customer-managemnet.html" class="nav-link">
           <i class="fa-solid fa-users"></i>
           <span>Customer Management</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="order-transactions.html" class="nav-link">
           <i class="fa-solid fa-credit-card"></i>
           <span>Order Transaction</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="store-settings.html" class="nav-link">
           <i class="fa-solid fa-gear"></i>
           <span>Store Setting</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="activity-log.html" class="nav-link">
           <i class="fa-solid fa-clock-rotate-left"></i>
           <span>Activity Log</span>
         </a>
