--- a/admin/html/qrscanner.html
+++ b/admin/html/qrscanner.html
@@ -1020,27 +1020,27 @@
         <div class="store-name">Beauty & Blessed</div>
       </div>
       <div class="nav flex-column">
-        <a href="#" class="nav-link">
+        <a href="product-management.html" class="nav-link">
           <i class="fa-solid fa-box"></i>
           <span>Product Management</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="recommendation-insights.html" class="nav-link">
           <i class="fa-solid fa-lightbulb"></i>
           <span>Recommendation Insights</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="customer-managemnet.html" class="nav-link">
           <i class="fa-solid fa-users"></i>
           <span>Customer Management</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="order-transactions.html" class="nav-link">
           <i class="fa-solid fa-credit-card"></i>
           <span>Order Transaction</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="store-settings.html" class="nav-link">
           <i class="fa-solid fa-gear"></i>
           <span>Store Setting</span>
         </a>
-        <a href="#" class="nav-link">
+        <a href="activity-log.html" class="nav-link">
           <i class="fa-solid fa-clock-rotate-left"></i>
           <span>Activity Log</span>
         </a>
