in progress - connected cart. status: tbf

--- a/user/html/cart.html
+++ b/user/html/cart.html
@@ -634,29 +634,29 @@
         </div>
     </header>
 
-    <!-- Desktop Navigation - Top Position -->
-    <nav class="desktop-nav">
-        <div class="nav-item" data-page="home">
-            <i class="fas fa-home"></i>
-            <span>Home</span>
-        </div>
-        <div class="nav-item" data-page="favorites">
-            <i class="fas fa-heart"></i>
-            <span>Favorites</span>
-        </div>
-        <div class="nav-item" data-page="recommender">
-            <i class="fas fa-star"></i>
-            <span>Recommender</span>
-        </div>
-        <div class="nav-item active" data-page="cart">
-            <i class="fas fa-shopping-cart"></i>
-            <span>Cart</span>
-        </div>
-        <div class="nav-item" data-page="tryon">
-            <i class="fas fa-camera"></i>
-            <span>Virtual Try-On</span>
-        </div>
-    </nav>
+<!-- Desktop Navigation - Top Position -->
+<nav class="desktop-nav">
+  <a href="home.html" class="nav-item" data-page="home">
+    <i class="fas fa-home"></i>
+    <span>Home</span>
+  </a>
+  <a class="nav-item" data-page="favorites">
+    <i class="fas fa-heart"></i>
+    <span>Favorites</span>
+  </a>
+  <div class="nav-item" data-page="recommender">
+    <i class="fas fa-star"></i>
+    <span>Recommender</span>
+  </div>
+  <a href="cart.html" class="nav-item active" data-page="cart">
+    <i class="fas fa-shopping-cart"></i>
+    <span>Cart</span>
+  </a>
+  <div class="nav-item" data-page="tryon">
+    <i class="fas fa-camera"></i>
+    <span>Virtual Try-On</span>
+  </div>
+</nav>
 
     <!-- Page Content -->
     <main>
@@ -693,29 +693,29 @@
 
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <div class="mobile-nav-items">
-            <div class="nav-item" data-page="home">
-                <i class="fas fa-home"></i>
-                <span>Home</span>
-            </div>
-            <div class="nav-item" data-page="favorites">
-                <i class="fas fa-heart"></i>
-                <span>Favorites</span>
-            </div>
-            <div class="nav-item" data-page="recommender">
-                <i class="fas fa-star"></i>
-                <span>Recommender</span>
-            </div>
-            <div class="nav-item active" data-page="cart">
-                <i class="fas fa-shopping-cart"></i>
-                <span>Cart</span>
-            </div>
-            <div class="nav-item" data-page="tryon">
-                <i class="fas fa-camera"></i>
-                <span>Try-On</span>
-            </div>
-        </div>
-    </nav>
+<div class="mobile-nav-items">
+  <a href="home.html" class="nav-item" data-page="home">
+    <i class="fas fa-home"></i>
+    <span>Home</span>
+  </a>
+  <a class="nav-item" data-page="favorites">
+    <i class="fas fa-heart"></i>
+    <span>Favorites</span>
+  </a>
+  <div class="nav-item" data-page="recommender">
+    <i class="fas fa-star"></i>
+    <span>Recommender</span>
+  </div>
+  <a href="cart.html" class="nav-item active" data-page="cart">
+    <i class="fas fa-shopping-cart"></i>
+    <span>Cart</span>
+  </a>
+  <div class="nav-item" data-page="tryon">
+    <i class="fas fa-camera"></i>
+    <span>Try-On</span>
+  </div>
+</div>
+</nav>
 
     <script>
         // Sample product data with variations
