nav bar working (tbf) product detail file to checkout working

--- a/user/html/home.html
+++ b/user/html/home.html
@@ -693,7 +693,7 @@
 
     <!-- Desktop Navigation -->
     <nav class="desktop-nav">
-      <a href="home.html" class="nav-item active" data-page="home">
+      <a class="nav-item active" data-page="home">
         <i class="fas fa-home"></i>
         <span>Home</span>
       </a>
