--- a/admin/html/product-management.html
+++ b/admin/html/product-management.html
@@ -43,19 +43,17 @@
       /* Sidebar */
       .sidebar {
         min-height: 100vh;
-        background: linear-gradient(
-          180deg,
-          var(--primary-pink) 0%,
-          var(--darker-pink) 100%
-        );
+        background: linear-gradient(180deg, var(--primary-pink) 0%, var(--darker-pink) 100%);
         color: white;
-        box-shadow: 3px 0 20px rgba(0, 0, 0, 0.15);
+        box-shadow: 3px 0 20px rgba(0,0,0,0.15);
         position: fixed;
         top: 0;
         left: 0;
-        width: 220px;
+        width: 16.666667%;
+        height: 100vh;
         z-index: 100;
         transition: transform 0.3s ease;
+        overflow-y: auto;
       }
 
       .sidebar .nav-link {
@@ -150,8 +148,9 @@
       /* Main content padding */
       main {
         padding: 35px !important;
-        margin-left: 220px;
-        width: calc(100% - 220px);
+        margin-left: 16.666667%;
+        width: calc(100% - 16.666667%);
+        transition: margin-left 0.3s ease;
       }
 
       /* Product Management Section */
